[package]
name = "shuttle-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
hyper = { version = "0.14.18", features = ["full"] }
shuttle-service = { version = "0.2", features = ["web-axum"]}
sync_wrapper = "0.1.1"
tokio = { version = "1.18.0", features = ["full"] }
tower = "0.4.12"

[lib]
crate-type = ["cdylib"]


